[package]
name = "codebreaker"
version = "0.2.1"
description = "Decrypt & encrypt any cheat code for CodeBreaker PS2"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mlafeldt/codebreaker-rs"
documentation = "https://docs.rs/codebreaker/"
homepage = "https://crates.io/crates/codebreaker"
keywords = ["codebreaker", "ps2", "gamehacking", "homebrew"]
categories = ["algorithms", "cryptography", "no-std"]
edition = "2018"

[lib]
name = "codebreaker"

[dependencies]
bytemuck = "1.2"