[package]
name = "codebreaker"
version = "0.3.2"
description = "Decrypt & encrypt any cheat code for CodeBreaker PS2"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mlafeldt/codebreaker-rs"
documentation = "https://docs.rs/codebreaker/"
homepage = "https://crates.io/crates/codebreaker"
keywords = ["codebreaker", "ps2", "gamehacking", "homebrew"]
categories = ["algorithms", "cryptography", "no-std"]
edition = "2024"

[lib]
name = "codebreaker"

[dependencies]
bytemuck = "1"
num-bigint = "0.4"

[dev-dependencies]
doc-comment = "0.3"
pretty_assertions = "1"

[features]
default = ["std"]
std = ["num-bigint/std"]
